--- a/LoanManagementSystem/Views/AccountBooks/Create.cshtml
+++ b/LoanManagementSystem/Views/AccountBooks/Create.cshtml
@@ -20,103 +20,115 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        
+    <div class="col-md-5 form-horizontal">
 
-    <div class="form-horizontal">
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.BookCode, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.BookCode, new { htmlAttributes = new { } })
+                @Html.LabelFor(model => model.BookCode, htmlAttributes: new { @class = "control-label" })
+                @Html.EditorFor(model => model.BookCode, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.BookCode, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.BookName, htmlAttributes: new { @class = "control-label col-md-2" })
+
             <div class="col-md-10">
-                @Html.EditorFor(model => model.BookName, new { htmlAttributes = new { } })
+                @Html.LabelFor(model => model.BookName, htmlAttributes: new { @class = "control-label" })
+                @Html.EditorFor(model => model.BookName, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.BookName, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.BookDescription, htmlAttributes: new { @class = "control-label col-md-2" })
+
             <div class="col-md-10">
-                @Html.TextAreaFor(model => model.BookDescription, new { htmlAttributes = new { } })
+                @Html.LabelFor(model => model.BookDescription, htmlAttributes: new { @class = "control-label" })
+                @Html.TextAreaFor(model => model.BookDescription, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.BookDescription, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.AccountBookTypeId, "AccountBookTypeId", htmlAttributes: new { @class = "control-label col-md-2" })
+
             <div class="col-md-10">
-                @Html.DropDownList("AccountBookTypeId", null, htmlAttributes: new { @id = "ddlAccountBookType" })
+                @Html.LabelFor(model => model.AccountBookTypeId, htmlAttributes: new { @class = "control-label" })
+                @Html.DropDownList("AccountBookTypeId", null, htmlAttributes: new { @id = "ddlAccountBookType", @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.AccountBookTypeId, "", new { @class = "text-danger" })
             </div>
         </div>
         <div id="dvAccHeads">
             <div class="form-group">
-                @Html.LabelFor(model => model.AccountHeadId, "AccountHeadId", htmlAttributes: new { @class = "control-label col-md-2" })
+
                 <div class="col-md-10">
-                    @Html.DropDownList("AccountHeadId", (SelectList)ViewBag.AccountHeadId, htmlAttributes: new { })
+                    @Html.LabelFor(model => model.AccountHeadId, htmlAttributes: new { @class = "control-label" })
+                    @Html.DropDownList("AccountHeadId", (SelectList)ViewBag.AccountHeadId, htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.AccountHeadId, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.BankInterest, htmlAttributes: new { @class = "control-label col-md-2" })
+
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.BankInterest, new { htmlAttributes = new { @Value = ViewBag.BankInterest } })
+                    @Html.LabelFor(model => model.BankInterest, htmlAttributes: new { @class = "control-label" })
+                    @Html.EditorFor(model => model.BankInterest, new { htmlAttributes = new { @Value = ViewBag.BankInterest, @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.BankInterest, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.BankCharges, htmlAttributes: new { @class = "control-label col-md-2" })
+
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.BankCharges, new { htmlAttributes = new { @Value = ViewBag.BankCharges } })
+                    @Html.LabelFor(model => model.BankCharges, htmlAttributes: new { @class = "control-label" })
+                    @Html.EditorFor(model => model.BankCharges, new { htmlAttributes = new { @Value = ViewBag.BankCharges, @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.BankCharges, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
-
+    </div>
+    <div class="col-md-5 form-horizontal">
         <div class="form-group">
-            @Html.LabelFor(model => model.ReceiptVoucherPrefix, htmlAttributes: new { @class = "control-label col-md-2" })
+
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ReceiptVoucherPrefix, new { htmlAttributes = new { } })
+                @Html.LabelFor(model => model.ReceiptVoucherPrefix, htmlAttributes: new { @class = "control-label" })
+                @Html.EditorFor(model => model.ReceiptVoucherPrefix, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ReceiptVoucherPrefix, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ReceiptVoucherSuffix, htmlAttributes: new { @class = "control-label col-md-2" })
+
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ReceiptVoucherSuffix, new { htmlAttributes = new { } })
+                @Html.LabelFor(model => model.ReceiptVoucherSuffix, htmlAttributes: new { @class = "control-label" })
+                @Html.EditorFor(model => model.ReceiptVoucherSuffix, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ReceiptVoucherSuffix, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.PaymentVoucherPrefix, htmlAttributes: new { @class = "control-label col-md-2" })
+
             <div class="col-md-10">
-                @Html.EditorFor(model => model.PaymentVoucherPrefix, new { htmlAttributes = new { } })
+                @Html.LabelFor(model => model.PaymentVoucherPrefix, htmlAttributes: new { @class = "control-label" })
+                @Html.EditorFor(model => model.PaymentVoucherPrefix, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.PaymentVoucherPrefix, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.PaymentVoucherSuffix, htmlAttributes: new { @class = "control-label col-md-2" })
+
             <div class="col-md-10">
-                @Html.EditorFor(model => model.PaymentVoucherSuffix, new { htmlAttributes = new { } })
+                @Html.LabelFor(model => model.PaymentVoucherSuffix, htmlAttributes: new { @class = "control-label" })
+                @Html.EditorFor(model => model.PaymentVoucherSuffix, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.PaymentVoucherSuffix, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2" })
+
             <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.Status, htmlAttributes: new { })
+                @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label" })
+                @Html.EnumDropDownListFor(model => model.Status, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
             </div>
         </div>
