--- a/LoanManagementSystem/Views/Member/Delete.cshtml
+++ b/LoanManagementSystem/Views/Member/Delete.cshtml
@@ -82,10 +82,10 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.UserAddress.District)
+            @Html.DisplayNameFor(model => model.UserAddress.DistrictId)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.UserAddress.District)
+            @Html.DisplayFor(model => model.UserAddress.DistrictId)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.FatherName)
@@ -135,10 +135,10 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.PermanentAddress.District)
+            @Html.DisplayNameFor(model => model.PermanentAddress.DistrictId)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.PermanentAddress.District)
+            @Html.DisplayFor(model => model.PermanentAddress.DistrictId)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.PermanentContacts.Telephone1)
