--- a/LoanManagementSystem/Views/AccountBooks/Edit.cshtml
+++ b/LoanManagementSystem/Views/AccountBooks/Edit.cshtml
@@ -3,116 +3,147 @@
 @{
     ViewBag.Title = "Edit Account Books";    
 }
+
+
+<script language="javascript" type="text/javascript">
+
+    $(document).ready(function () {
+        if ($('#ddlAccountBookType').val() == "3")
+            $('#dvAccHeads').hide();
+        else
+            $('#dvAccHeads').show();
+
+        $('#ddlAccountBookType').change(function () {
+            if ($('#ddlAccountBookType').val() == "3")
+                $('#dvAccHeads').hide();
+            else
+                $('#dvAccHeads').show();
+        });
+    })
+
+</script>
+
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-
-    <div class="form-horizontal">
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.AccountBookId)
-        @Html.HiddenFor(model => model.CreatedBy)
-        @Html.HiddenFor(model => model.CreatedOn)
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.HiddenFor(model => model.AccountBookId)
+    @Html.HiddenFor(model => model.CreatedBy)
+    @Html.HiddenFor(model => model.CreatedOn)
+    <div class="col-md-5 form-horizontal">
 
         <div class="form-group">
-            @Html.LabelFor(model => model.BookCode, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.BookCode, new { htmlAttributes = new {  } })
+                @Html.LabelFor(model => model.BookCode, htmlAttributes: new { @class = "control-label" })
+                @Html.EditorFor(model => model.BookCode, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.BookCode, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.BookName, htmlAttributes: new { @class = "control-label col-md-2" })
+
             <div class="col-md-10">
-                @Html.EditorFor(model => model.BookName, new { htmlAttributes = new {  } })
+                @Html.LabelFor(model => model.BookName, htmlAttributes: new { @class = "control-label" })
+                @Html.EditorFor(model => model.BookName, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.BookName, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.BookDescription, htmlAttributes: new { @class = "control-label col-md-2" })
+
             <div class="col-md-10">
-                @Html.TextAreaFor(model => model.BookDescription, new { htmlAttributes = new {  } })
+                @Html.LabelFor(model => model.BookDescription, htmlAttributes: new { @class = "control-label" })
+                @Html.TextAreaFor(model => model.BookDescription, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.BookDescription, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.AccountBookTypeId, "AccountBookTypeId", htmlAttributes: new { @class = "control-label col-md-2" })
+
             <div class="col-md-10">
-                @Html.DropDownList("AccountBookTypeId", null, htmlAttributes: new {  })
+                @Html.LabelFor(model => model.AccountBookTypeId, htmlAttributes: new { @class = "control-label" })
+                @Html.DropDownList("AccountBookTypeId", null, htmlAttributes: new { @id = "ddlAccountBookType", @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.AccountBookTypeId, "", new { @class = "text-danger" })
             </div>
         </div>
+        <div id="dvAccHeads">
+            <div class="form-group">
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.AccountHeadId, "AccountHeadId", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("AccountHeadId", null, htmlAttributes: new {  })
-                @Html.ValidationMessageFor(model => model.AccountHeadId, "", new { @class = "text-danger" })
+                <div class="col-md-10">
+                    @Html.LabelFor(model => model.AccountHeadId, htmlAttributes: new { @class = "control-label" })
+                    @Html.DropDownList("AccountHeadId", (SelectList)ViewBag.AccountHeadId, htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.AccountHeadId, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+
+                <div class="col-md-10">
+                    @Html.LabelFor(model => model.BankInterest, htmlAttributes: new { @class = "control-label" })
+                    @Html.EditorFor(model => model.BankInterest, new { htmlAttributes = new {@class = "form-control" } })                    
+                    @Html.ValidationMessageFor(model => model.BankInterest, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+
+                <div class="col-md-10">
+                    @Html.LabelFor(model => model.BankCharges, htmlAttributes: new { @class = "control-label" })
+                    @Html.EditorFor(model => model.BankCharges, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.BankCharges, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
-
+    </div>
+    <div class="col-md-5 form-horizontal">
         <div class="form-group">
-            @Html.LabelFor(model => model.BankInterest, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.BankInterest, new { htmlAttributes = new {  } })
-                @Html.ValidationMessageFor(model => model.BankInterest, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.BankCharges, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.BankCharges, new { htmlAttributes = new {  } })
-                @Html.ValidationMessageFor(model => model.BankCharges, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ReceiptVoucherPrefix, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ReceiptVoucherPrefix, new { htmlAttributes = new {  } })
+                @Html.LabelFor(model => model.ReceiptVoucherPrefix, htmlAttributes: new { @class = "control-label" })
+                @Html.EditorFor(model => model.ReceiptVoucherPrefix, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ReceiptVoucherPrefix, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ReceiptVoucherSuffix, htmlAttributes: new { @class = "control-label col-md-2" })
+
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ReceiptVoucherSuffix, new { htmlAttributes = new {  } })
+                @Html.LabelFor(model => model.ReceiptVoucherSuffix, htmlAttributes: new { @class = "control-label" })
+                @Html.EditorFor(model => model.ReceiptVoucherSuffix, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ReceiptVoucherSuffix, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.PaymentVoucherPrefix, htmlAttributes: new { @class = "control-label col-md-2" })
+
             <div class="col-md-10">
-                @Html.EditorFor(model => model.PaymentVoucherPrefix, new { htmlAttributes = new {  } })
+                @Html.LabelFor(model => model.PaymentVoucherPrefix, htmlAttributes: new { @class = "control-label" })
+                @Html.EditorFor(model => model.PaymentVoucherPrefix, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.PaymentVoucherPrefix, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.PaymentVoucherSuffix, htmlAttributes: new { @class = "control-label col-md-2" })
+
             <div class="col-md-10">
-                @Html.EditorFor(model => model.PaymentVoucherSuffix, new { htmlAttributes = new {  } })
+                @Html.LabelFor(model => model.PaymentVoucherSuffix, htmlAttributes: new { @class = "control-label" })
+                @Html.EditorFor(model => model.PaymentVoucherSuffix, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.PaymentVoucherSuffix, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2" })
+
             <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.Status, htmlAttributes: new {  })
+                @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label" })
+                @Html.EnumDropDownListFor(model => model.Status, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-4 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />                
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
