--- a/LoanManagementSystem/Views/Member/Details.cshtml
+++ b/LoanManagementSystem/Views/Member/Details.cshtml
@@ -80,10 +80,10 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.UserAddress.District)
+            @Html.DisplayNameFor(model => model.UserAddress.DistrictId)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.UserAddress.District)
+            @Html.DisplayFor(model => model.UserAddress.DistrictId)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.FatherName)
@@ -133,10 +133,10 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.PermanentAddress.District)
+            @Html.DisplayNameFor(model => model.PermanentAddress.DistrictId)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.PermanentAddress.District)
+            @Html.DisplayFor(model => model.PermanentAddress.DistrictId)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.PermanentContacts.Telephone1)
