--- a/LoanManagementSystem/Views/Shared/MenuView.cshtml
+++ b/LoanManagementSystem/Views/Shared/MenuView.cshtml
@@ -5,7 +5,7 @@
     {
         <li>
             <a href='@(string.IsNullOrWhiteSpace(treeNode.NodeElement.Url)? "javascript:void(0);" : treeNode.NodeElement.Url)'>
-               <i class="fa fa-home"></i> @treeNode.NodeElement.UrlText <span class="fa fa-chevron-down"></span>
+               @*<i class="fa fa-home"></i>*@ @treeNode.NodeElement.UrlText <span class="fa fa-chevron-down"></span>
             </a>
 
             <ul class=nav child_menu" style="display: none">
