--- a/LoanManagementSystem/Views/UserGroup/Edit.cshtml
+++ b/LoanManagementSystem/Views/UserGroup/Edit.cshtml
@@ -14,6 +14,9 @@
         <hr />
         @Html.ValidationSummary(true)
         @Html.HiddenFor(model => model.UserGroupId)
+        @Html.HiddenFor(model => model.CreatedOn)
+        @Html.HiddenFor(model => model.CreatedBy)
+        @Html.HiddenFor(model => model.IsDeleted)
 
         <div class="form-group">
             @Html.LabelFor(model => model.Code, new { @class = "control-label col-md-2" })
