--- a/LoanManagementSystem/Views/Deposit/Edit.cshtml
+++ b/LoanManagementSystem/Views/Deposit/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Data.Models.Accounts.sdtoDepositInfo
 
 @{
-    ViewBag.Title = "Add Deposit";
+    ViewBag.Title = "Edit Deposit";
 
 }
 <link href="~/Content/bootstrap-datepicker.min.css" rel="stylesheet" />
